--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="add_gratitude">Add New Gratitude</string>
+    <string name="what_made_grateful">What made you feel grateful today?</string>
+    <string name="why_made_grateful">Why it made you feel grateful?</string>
+    <string name="submit">Submit</string>
 </resources>
