--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="what_made_grateful">What made you feel grateful today?</string>
     <string name="why_made_grateful">Why it made you feel grateful?</string>
     <string name="submit">Submit</string>
+    <string name="type_of_positive_emotion">Type</string>
 </resources>
