--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,6 @@
     <string name="why_made_grateful">Why it made you feel grateful?</string>
     <string name="submit">Submit</string>
     <string name="type_of_positive_emotion">Type</string>
+    <string name="delete">delete</string>
+    <string name="positive_emotion_type_formatting">(%1$s)</string>
 </resources>
