Menambahkan date filter (belum fungsionality)
- Menambahkan textinputlayout untuk memilih tanggal di fragment_main.xml
- Menambahkan icon calendar (ic_calendar.xml)
- Menambahkan clicklistener untuk datepicker pada fragment_main
- Menambahkan variabel untuk livedata dari tanggal yang dipilih

--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -7,4 +7,6 @@
     <string name="type_of_positive_emotion">Type</string>
     <string name="delete">delete</string>
     <string name="positive_emotion_type_formatting">(%1$s)</string>
+    <string name="empty_date">--/-/----</string>
+    <string name="date_selector_label">date</string>
 </resources>
