--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -9,4 +9,5 @@
     <string name="positive_emotion_type_formatting">(%1$s)</string>
     <string name="empty_date">--/-/----</string>
     <string name="date_selector_label">date</string>
+    <string name="filter_by">Filter By :</string>
 </resources>
