Menambahkan deskripsi dari setiap positive emotion
- Menambahkan deskripsi untuk setiap positive emotion
- Menambahkan positive emotion baru, yaitu "Awe"
- Menambahkan opsi "other" untuk positive emotion yang tidak terdaftar

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,7 @@
     <string name="empty_date">--/-/----</string>
     <string name="date_selector_label">date</string>
     <string name="filter_by">Filter By :</string>
+    <string name="help">help</string>
+    <string name="positive_emotion_description">
+        Joy :\n\tPerasaan</string>
 </resources>
