--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -10,4 +10,5 @@
     <string name="empty_date">--/-/----</string>
     <string name="date_selector_label">date</string>
     <string name="filter_by">Filter By :</string>
+    <string name="help">help</string>
 </resources>
