Berhasil solve bug ketika rotate, edittext hilang
- Menghapus debug log
- Membetulkan bug ketika rotating pada EditPositiveEmotion

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,11 @@
     <string name="help">help</string>
     <string name="positive_emotion_description">
         Joy :\n\tPerasaan</string>
+    <string name="title">Title</string>
+    <string name="description">Description</string>
+    <string name="edit">edit</string>
+    <string name="save_change">Save Changes</string>
+    <string name="confirm_save">Are you sure to save the changes?</string>
+    <string name="yes">Yes</string>
+    <string name="no">No</string>
 </resources>
