--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -11,4 +11,11 @@
     <string name="date_selector_label">date</string>
     <string name="filter_by">Filter By :</string>
     <string name="help">help</string>
+    <string name="title">Title</string>
+    <string name="description">Description</string>
+    <string name="edit">edit</string>
+    <string name="save_change">Save Changes</string>
+    <string name="confirm_save">Are you sure to save the changes?</string>
+    <string name="yes">Yes</string>
+    <string name="no">No</string>
 </resources>
