Change Fragment title pada navigation.xml(label)

--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -13,7 +13,7 @@
     <string name="help">help</string>
     <string name="title">Title</string>
     <string name="description">Description</string>
-    <string name="edit">edit</string>
+    <string name="edit">Edit</string>
     <string name="save_change">Save Changes</string>
     <string name="confirm_save">Are you sure to save the changes?</string>
     <string name="yes">Yes</string>
