--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,7 +17,7 @@
         Joy :\n\tPerasaan</string>
     <string name="title">Title</string>
     <string name="description">Description</string>
-    <string name="edit">edit</string>
+    <string name="edit">Edit</string>
     <string name="save_change">Save Changes</string>
     <string name="confirm_save">Are you sure to save the changes?</string>
     <string name="yes">Yes</string>
