--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,5 @@
     <string name="confirm_save">Are you sure to save the changes?</string>
     <string name="yes">Yes</string>
     <string name="no">No</string>
+    <string name="set_password">Set Password</string>
 </resources>
