--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,4 +30,6 @@
     <string name="default_notification_time">00:00</string>
     <string name="saved_switch_status">SavedNotificationSwitchStatus</string>
     <string name="set_notification">Set Notification</string>
+    <string name="saved_hours">SavedHours</string>
+    <string name="saved_minutes">SavedMinutes</string>
 </resources>
