--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -75,4 +75,5 @@
     <string name="message_bundle_key">MessageBundleKey</string>
     <string name="requestkey_bundle_key">RequestKeyBundleKey</string>
     <string name="valuekey_bundle_key">ValueKeyBundleKey</string>
+    <string name="backup_restore_process_status">Sedang melakukan proses %1$s…</string>
 </resources>
